WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286212
<input type=color alpha> swatch does not have a background that reflects the transparency
https://bugs.webkit.org/show_bug.cgi?id=286212
Summary
<input type=color alpha> swatch does not have a background that reflects the ...
Tim Nguyen (:ntim)
Reported
2025-01-18 08:48:16 PST
Created
attachment 473941
[details]
Screenshot It's non-obvious from the swatch that there is an alpha color selected
Attachments
Screenshot
(210.79 KB, image/png)
2025-01-18 08:48 PST
,
Tim Nguyen (:ntim)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-18 08:49:00 PST
<
rdar://problem/143188497
>
Anne van Kesteren
Comment 2
2025-01-22 07:25:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39380
EWS
Comment 3
2025-01-23 13:20:31 PST
Committed
289314@main
(3d975165870f): <
https://commits.webkit.org/289314@main
> Reviewed commits have been landed. Closing PR #39380 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug