<input type=color alpha> swatch does not have a background that reflects the transparency https://bugs.webkit.org/show_bug.cgi?id=286212 rdar://143188497

Reviewed by Aditya Keerthi.

When a color with alpha channel was selected this would result in the
background of the parent element becoming visible. To prevent this we
perform a source-over color blending operation with opaque white. This
matches how the control behaves on iOS and seems like a reasonable
platform-neutral default.

For macOS we want to render a diagonally divided rectangle with one of
the triangles using opaque black as input for the blending operation
and the other opaque white to match the platform color well.

* LayoutTests/fast/forms/color/color-input-swatch-expected.txt: Added.
* LayoutTests/fast/forms/color/color-input-swatch.html: Added.
* LayoutTests/platform/mac/fast/forms/color/color-input-swatch-expected.txt: Added.
* Source/WebCore/html/ColorInputType.cpp:
(WebCore::ColorInputType::updateColorSwatch):
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::setColorWellSwatchBackground):
* Source/WebCore/rendering/RenderTheme.h:
* Source/WebCore/rendering/mac/RenderThemeMac.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::setColorWellSwatchBackground):

Canonical link: https://commits.webkit.org/289314@main