Source/WebCore/rendering/mac/RenderThemeMac.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005-2024 Apple Inc. All rights reserved.
+ * Copyright (C) 2005-2025 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -80,6 +80,8 @@ public:
 
     FloatSize meterSizeForBounds(const RenderMeter&, const FloatRect&) const final;
     bool supportsMeter(StyleAppearance) const final;
+
+    void setColorWellSwatchBackground(HTMLElement&, Color) final;
 
     IntRect progressBarRectForBounds(const RenderProgress&, const IntRect&) const final;
 
